<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="@dimen/edt_width"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/logoImgView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="139dp"
            android:src="@drawable/map" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputTextLayout"
            style="@style/RoundCornerEditTextBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/name">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="@dimen/edt_width"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputTextLayout"
            style="@style/RoundCornerEditTextBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/email">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="@dimen/edt_width"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/submitButton"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/round_button"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>